galen-core/src/test/resources/negative-specs/incorrect-indentation-3.spec


==============
object    id object
==============


object
	width: 10px
